feat: 健康节点展示

--- a/crontab/master/internal/web/static/index.html
+++ b/crontab/master/internal/web/static/index.html
@@ -291,7 +291,7 @@
                             return
                         }
 
-                        var workerList = resp.data
+                        var workerList = resp.data.workerAddr
                         // 遍历每个IP, 添加到模态框的table中
                         for (var i = 0; i < workerList.length; ++i) {
                             var workerIP = workerList[i]
